fixed VH4-54 (Home page desktop active) wrong color for active input was assigned

--- a/styles/pages/home.css
+++ b/styles/pages/home.css
@@ -45,11 +45,15 @@ header div.hero-content form input {
   font-family: var(--font-text);
   font-size: 15px;
   font-weight: bold;
-  opacity: 50%;
+  color: var(--color-secondary-title-text);
   box-shadow:
     rgba(0, 0, 0, 0.16) 0px 10px 36px 0px,
     rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
   margin-top: 13px;
+}
+
+header div.hero-content form input::placeholder{
+  opacity: 50%;
 }
 
 header div.hero-content form button {
